--- a/Code_B_Taiwan.ipynb
+++ b/Code_B_Taiwan.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcc2CSLKCU4erfeEnRiClD",
+      "authorship_tag": "ABX9TyOXAO77Ha2r9PxOmq54ArNG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -776,6 +776,20 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The heatmap answers: “If I care α much about accuracy vs interpretability, which model+sampler combination is best overall?”\n",
+        "\n",
+        "It does not answer: “Which explanation method (SHAP, Owen, Banzhaf) is best at each α?”\n",
+        " SHAP, Banzhaf, and Owen values are averaged together inside each cell.\n",
+        "\n",
+        "The heatmap therefore shows which model+sampler combinations perform best at different α values, but it doesn’t distinguish which explanation method was responsible"
+      ],
+      "metadata": {
+        "id": "mWKYuapXmtkd"
+      }
     }
   ]
 }
